@@ -388,6 +388,9 @@ static enum CRStatus
 cr_parser_parse_ident (CRParser *a_this, GString **a_str) ;
 
 static enum CRStatus
+cr_parser_parse_vendor_specific_ident (CRParser *a_this, GString **a_str) ;
+
+static enum CRStatus
 cr_parser_parse_uri (CRParser *a_this, GString **a_str) ;
 
 static enum CRStatus
@@ -1990,7 +1993,9 @@ cr_parser_parse_property (CRParser *a_this, GString **a_property)
         RECORD_INITIAL_POS (a_this, &init_pos) ;
 
         status = cr_parser_parse_ident (a_this, a_property) ;
-
+        if (status != CR_OK)
+                status = cr_parser_parse_vendor_specific_ident 
+                        (a_this, a_property) ;
         CHECK_PARSING_STATUS (status, TRUE) ;
 
         cr_parser_try_to_skip_spaces_and_comments (a_this) ;
@@ -2842,6 +2847,35 @@ cr_parser_parse_ident (CRParser *a_this, GString **a_str)
         
         status = cr_tknzr_parse_token (PRIVATE (a_this)->tknzr,
                                        IDENT_TK, NO_ET, a_str, NULL) ;
+        return status ;
+}
+
+/**
+ *Parses a "vendor-specific-ident" as not defined in the CSS2 spec.
+ *It's only a dash followed by an identifier.
+ *
+ *@param a_this the currens instance of #CRParser.
+ *
+ *@param a_str a pointer to parsed ident. If *a_str is NULL,
+ *this function allocates a new instance of GString. If not, 
+ *the function just appends the parsed string to the one passed.
+ *In both cases it is up to the caller to free *a_str.
+ *
+ *@return CR_OK upon successfull completion, an error code 
+ *otherwise.
+ */
+static enum CRStatus
+cr_parser_parse_vendor_specific_ident (CRParser *a_this, GString **a_str)
+{
+        enum CRStatus status = CR_OK ;
+
+        g_return_val_if_fail (a_this && PRIVATE (a_this) 
+                              && PRIVATE (a_this)->tknzr 
+                              && a_str, 
+                              CR_BAD_PARAM_ERROR) ;
+        
+        status = cr_tknzr_parse_token (PRIVATE (a_this)->tknzr,
+                                       VENDOR_SPECIFIC_IDENT_TK, NO_ET, a_str, NULL) ;
         return status ;
 }
 
