@@ -1,3 +1,9 @@
+2004-02-24  Dodji Seketeli  <dodji@gnome.org>
+
+	* src/cr-parser.c,src/cr-tknzr.c,src/cr-token.[ch]: 
+	 added the support of
+	vendor specific property names.
+	
 2004-02-19  Dodji Seketeli  <dodji@gnome.org>
 
 	* src/cr-sel-eng.c: 
